[develop]
script_dir=$base/lib/py_action
[install]
install_scripts=$base/lib/py_action

[options]
packages=find:
[options.packages.find]
where=py_action

[options.entry_points]
console_scripts =
    fibonacci_action_server = py_action.fibonacci_action_server:main
    fibonacci_action_client = py_action.fibonacci_action_client:main

