[develop]
script_dir=$base/lib/py_srvcli
[install]
install_scripts=$base/lib/py_srvcli
[metadata]
name = py-srvcli
version = 0.0.1

[options]
packages = find:

[options.entry_points]
console_scripts =
    add_two_ints_client = py_srvcli.add_two_ints_client:main
    add_two_ints_server = py_srvcli.add_two_ints_server:main
    countdown_client    = py_srvcli.countdown_client:main

